Refactored python msmrd tools and added discretizeTraj notebook

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -157,7 +157,8 @@
    "source": [
     "# Load data from MSMRD integrator\n",
     "lagtime = 600\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_lagt' + str(lagtime) +  \\\n",
+    "numTrajs = 10000\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
