--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "import pickle\n",
     "import numpy as np\n",
-    "import msmrd2.analysis as msmrdals\n",
     "import pyemma\n",
     "import pyemma.plots as mplt\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
+    "import msmrd2.tools.msmTools as msmTools"
    ]
   },
   {
@@ -21,12 +22,12 @@
    "outputs": [],
    "source": [
     "# Parameters for loading files\n",
-    "nfiles = 1000\n",
+    "nfiles = 500\n",
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "totalTimeSteps = 2000000\n",
-    "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
+    "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 200\n",
@@ -43,8 +44,10 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
+    "fnamesuffix = '_discrete_python' # '_discrete'\n",
+    "filetype = 'xyz' # 'h5'\n",
     "for i in range(nfiles):\n",
-    "    dtraj = msmrdals.loadTrajectory(fnamebase, i)\n",
+    "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
     "    dtrajs.append(dtraj)    \n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
@@ -57,11 +60,11 @@
    "source": [
     "# Slice trajectories getting rid of the unbound state 0\n",
     "unboundStateIndex = 0\n",
-    "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
+    "slicedDtrajs = trajectoryTools.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
     "del dtrajs\n",
     "# Stitch trajectories if wanted\n",
     "if stitching:\n",
-    "    finalTrajs = msmrdals.stitchTrajs(slicedDtrajs, 500)\n",
+    "    finalTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, 500)\n",
     "else:\n",
     "    finalTrajs = slicedDtrajs"
    ]
@@ -132,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rateDictionary = msmrdals.MSMtoRateDictionary(mainmsm, numBoundStates, dtEffective, fullDictionary)\n",
+    "rateDictionary = msmTools.MSMtoRateDictionary(mainmsm, numBoundStates, dtEffective, fullDictionary)\n",
     "# Alternatively, it can all be done with one function: slice and stitch trajectories then build MSM and extract rates\n",
     "# rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
    ]
