--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deprecated (kept as reference since discretizeTtrajectory and generateRateDcitionary do this job now )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,7 +18,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools as msmrdtls\n",
-    "import msmrd2.analysis as msmrdals\n",
+    "import msmrd2.tools.trajectoryTools as trajectoryTools\n",
     "from msmrd2.markovModels import msmrdMarkovModel\n",
     "import pyemma\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,7 +50,7 @@
     "# Load full trajectories\n",
     "trajs = []\n",
     "for i in range(nfiles):\n",
-    "    traj = msmrdals.loadTrajectory(fnamebase, i)\n",
+    "    traj = trajectoryTools.loadTrajectory(fnamebase, i)\n",
     "    trajs.append(traj)\n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
@@ -99,27 +106,9 @@
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
     "for i in range(nfiles):\n",
-    "    dtraj = msmrdals.loadDiscreteTrajectory(fnamebase, i)\n",
+    "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i)\n",
     "    dtrajs.append(dtraj)    \n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rateDict = msmrdals.extractRatesMSM(dtrajs, 200, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rateDict"
    ]
   },
   {
@@ -137,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs,0)"
+    "slicedDtrajs = trajectoryTools.splitDiscreteTrajs(dtrajs,0)"
    ]
   },
   {
@@ -146,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stitchedTrajs = msmrdals.stitchTrajs(slicedDtrajs, 500)"
+    "stitchedTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, 500)"
    ]
   },
   {
@@ -330,109 +319,6 @@
     "      -np.log(1.0 - mymsm4.transition_matrix[origin][target])/(4*lagtime),\n",
     "      -np.log(1.0 - mymsm8.transition_matrix[origin][target])/(8*lagtime))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mytpt = pyemma.msm.tpt(mymsm,[0],[1])\n",
-    "mytpt.mfpt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1/(dt*mymsm.mfpt(0,1)*200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mytpt = pyemma.msm.tpt(mymsm,[15],[10])\n",
-    "mytpt.rate/dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create distionaries to keep track of specific events. Needed to calculate rates\n",
-    "boundstates = 2\n",
-    "orientations = 7\n",
-    "dt = trajs[0][2][0] - trajs[0][0][0]\n",
-    "rateDict, timeDict, eventDict = msmrdals.extractRates(dtrajs, boundstates, orientations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rateDict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=msmrdMarkovModel(3,6,-1,rateDict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.getRate('b2->b1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msmA = a.getMSM('15a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "msmA.getTransitionMatrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part1.state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
