Added bootstrapping routine

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -15,6 +15,7 @@
     "from msmrd2.integrators import overdampedLangevin as odLangevin\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.tools.particleTools as particleTools\n",
+    "import msmrd2.tools.analysis as analysisTools\n",
     "import timeit"
    ]
   },
@@ -135,8 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A');\n",
-    "plt.hist(fptsB, bins = 40, alpha=0.5, label ='B');\n",
+    "hbins = range(0, 600,15)\n",
+    "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A');\n",
+    "plt.hist(fptsB, bins = hbins, alpha=0.5, label ='B');\n",
     "plt.legend()"
    ]
   },
@@ -146,7 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array(fptsA).mean(), np.array(fptsB).mean() )"
+    "# Compuate mean and standard deviation of bootstrapped samples\n",
+    "numBootsrapSamples = 2000\n",
+    "mfptA, fptAstd = analysisTools.bootstrappingMFPTs(fptsA, numBootsrapSamples)\n",
+    "mfptB, fptBstd = analysisTools.bootstrappingMFPTs(fptsB, numBootsrapSamples)\n",
+    "print(\"Raw MFPTs (A and B): \", np.array(fptsA).mean(), np.array(fptsB).mean() )\n",
+    "print(\"Bootstrapping mean and std (A): \", mfptA, fptAstd)\n",
+    "print(\"Bootstrapping mean and std (B): \", mfptB, fptBstd)"
    ]
   },
   {
@@ -178,8 +186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='A');\n",
-    "plt.hist(MSMRDfptsB, bins = 40, alpha=0.5, label ='B');\n",
+    "hbins = range(0, 600,15)\n",
+    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='A');\n",
+    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='B');\n",
     "plt.legend()"
    ]
   },
@@ -189,7 +198,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array(MSMRDfptsA).mean(), np.array(MSMRDfptsB).mean())"
+    "# Compuate mean and standard deviation of bootstrapped samples\n",
+    "numBootsrapSamples = 2000\n",
+    "MSMRDmfptA, MSMRDfptAstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA, numBootsrapSamples)\n",
+    "MSMRDmfptB, MSMRDfptBstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB, numBootsrapSamples)\n",
+    "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA).mean(), np.array(MSMRDfptsB).mean())\n",
+    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA, MSMRDfptAstd)\n",
+    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB, MSMRDfptBstd)"
    ]
   },
   {
@@ -202,8 +217,10 @@
     "weightsA = np.ones_like(fptsA)/float(len(fptsA))\n",
     "weightsAMSMRD = np.ones_like(MSMRDfptsA)/float(len(MSMRDfptsA))\n",
     "# Plot histograms\n",
-    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A', weights = weightsA);\n",
+    "hbins = range(0, 600,15)\n",
+    "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
     "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
   },
@@ -217,8 +234,10 @@
     "weightsB = np.ones_like(fptsB)/float(len(fptsB))\n",
     "weightsBMSMRD = np.ones_like(MSMRDfptsB)/float(len(MSMRDfptsB))\n",
     "# Plot histograms\n",
-    "plt.hist(fptsB, bins = 40, alpha=0.5, label ='B', weights = weightsB);\n",
-    "plt.hist(MSMRDfptsB, bins = 40, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "hbins = range(0, 600,15)\n",
+    "plt.hist(fptsB, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
+    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
   },
