--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -30,8 +30,8 @@
     "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 200\n",
-    "reversible = True\n",
+    "lagtime = 400\n",
+    "reversible = False\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
    ]
@@ -44,8 +44,8 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete_python' # '_discrete'\n",
-    "filetype = 'xyz' # 'h5'\n",
+    "fnamesuffix = '_discrete' #'_discrete_python' # '_discrete'\n",
+    "filetype = 'h5' #'xyz' # 'h5'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
     "    dtrajs.append(dtraj)    \n",
@@ -61,7 +61,6 @@
     "# Slice trajectories getting rid of the unbound state 0\n",
     "unboundStateIndex = 0\n",
     "slicedDtrajs = trajectoryTools.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
-    "del dtrajs\n",
     "# Stitch trajectories if wanted\n",
     "if stitching:\n",
     "    finalTrajs = trajectoryTools.stitchTrajs(slicedDtrajs, 500)\n",
@@ -125,8 +124,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eig0 = mainmsm.eigenvectors_right()[4]\n",
-    "np.where(eig0>0.01)"
+    "n = 0\n",
+    "for traj in slicedDtrajs:\n",
+    "    n = n + len(traj)\n",
+    "n = n/len(slicedDtrajs)\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eig0 = mainmsm.eigenvectors_right()[0]\n",
+    "np.where(eig0>0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(eig0)\n",
+    "plt.xlim([0,20])"
    ]
   },
   {
