Added full discretization support to patchyDimer

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -271,13 +271,14 @@
     "# This yields the first passage times for a given bound state. Each trajectory is Integrated until \n",
     "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
     "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
-    "outputBoundStates = [1, 2, 5, 6] # Inne bound \n",
+    "outputBoundStates = [1, 2, 5, 6] # Inner bound \n",
+    "discretizationType = \"None\" # Return -1 instead of applying coreMSM or obtaining transition state\n",
     "for i in range(numTrajectories):\n",
     "    partlist = randomPartList()\n",
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
-    "        boundState = traj.getState(partlist[0], partlist[1])\n",
+    "        boundState = traj.getState(partlist[0], partlist[1], discretizationType)\n",
     "        if boundState in outputBoundStates:\n",
     "        #if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            print(integrator.clock, boundState)\n",
