--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -30,8 +30,8 @@
     "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 400\n",
-    "reversible = False\n",
+    "lagtime = 600\n",
+    "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
    ]
@@ -44,8 +44,8 @@
    "source": [
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
-    "fnamesuffix = '_discrete' #'_discrete_python' # '_discrete'\n",
-    "filetype = 'h5' #'xyz' # 'h5'\n",
+    "fnamesuffix = '_discrete_python' #'_discrete_python' # '_discrete'\n",
+    "filetype = 'xyz' #'xyz' # 'h5'\n",
     "for i in range(nfiles):\n",
     "    dtraj = trajectoryTools.loadDiscreteTrajectory(fnamebase, i, fnamesuffix, filetype)\n",
     "    dtrajs.append(dtraj)    \n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 1000\n",
+    "maxlagtime = 2000\n",
     "nits = 40\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
@@ -124,31 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 0\n",
-    "for traj in slicedDtrajs:\n",
-    "    n = n + len(traj)\n",
-    "n = n/len(slicedDtrajs)\n",
-    "print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eig0 = mainmsm.eigenvectors_right()[0]\n",
-    "np.where(eig0>0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "eig0 = mainmsm.eigenvectors_right()[1]\n",
+    "print(np.where(eig0>0.1))\n",
     "plt.plot(eig0)\n",
-    "plt.xlim([0,20])"
+    "plt.xlim([0,50])"
    ]
   },
   {
@@ -169,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Export to data file with pickle (to be loaded later)\n",
-    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle_out = open(\"pickled_data/ratedictionary_testFD_dimer_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
    ]
