--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -166,7 +166,7 @@
     "# Load data from MSMRD integrator\n",
     "lagtime = 600\n",
     "numTrajs = 10000\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_testFD_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
@@ -272,13 +272,12 @@
     "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
     "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
     "outputBoundStates = [1, 2, 5, 6] # Inner bound \n",
-    "discretizationType = \"None\" # Return -1 instead of applying coreMSM or obtaining transition state\n",
     "for i in range(numTrajectories):\n",
     "    partlist = randomPartList()\n",
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
-    "        boundState = traj.getState(partlist[0], partlist[1], discretizationType)\n",
+    "        boundState = traj.getState(partlist[0], partlist[1])\n",
     "        if boundState in outputBoundStates:\n",
     "        #if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            print(integrator.clock, boundState)\n",
