--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -63,7 +63,6 @@
     "# Setup for discrete trajectory (in this case patchy dimer)\n",
     "numParticles = 2\n",
     "bufferSize = effectivetimeSteps\n",
-    "discretizationMode = \"fullDiscretization\" # It can be \"CoreMSM\" or \"fullDiscretization\"\n",
     "discretizator = msmrd2.trajectories.patchyDimer(numParticles, effectivetimeSteps)\n",
     "# Set boundary (important for discretizer)\n",
     "boxBoundary = msmrd2.box(boxsize, boxsize, boxsize, boundaryType)\n",
@@ -80,7 +79,7 @@
     "dtrajs = []\n",
     "for i in range(nfiles):\n",
     "    currentTraj = trajs[i]\n",
-    "    dtraj = discretizator.discretizeTrajectory(currentTraj, discretizationMode)\n",
+    "    dtraj = discretizator.discretizeTrajectory(currentTraj)\n",
     "    dtrajs.append(dtraj)\n",
     "    if i%20 == 0:\n",
     "        print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")\n",
