--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -166,7 +166,7 @@
     "# Load data from MSMRD integrator\n",
     "lagtime = 600\n",
     "numTrajs = 10000\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_testFD_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
@@ -187,8 +187,8 @@
    "outputs": [],
    "source": [
     "hbins = range(0, 600,15)\n",
-    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='A');\n",
-    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='B');\n",
+    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='MSMRD-A');\n",
+    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='MSMRD-B');\n",
     "plt.legend()"
    ]
   },
