Clean up notebook and scripts

--- a/examples/benchmark/generatePatchyDimerFPTsBenchmark.ipynb
+++ b/examples/benchmark/generatePatchyDimerFPTsBenchmark.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is done by a script but this notebook was left as an example\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import msmrd2\n",
@@ -73,13 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generates FPT data from scratch\n",
     "# Generates numTrajectories trajectories starting at a random position and ending in a given bound state.\n",
     "# This yields the first passage times for a given bound state. Each trajectory is Integrated until \n",
     "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
     "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
     "outputBoundStates = [1, 2, 5, 6] # Inner bound\n",
-    "Afpts = []\n",
-    "Bfpts = []\n",
+    "fptsA = []\n",
+    "fptsB = []\n",
     "for i in range(numTrajectories):\n",
     "    print(\"Simulation:\", i, \"   \", end=\"\\r\")\n",
     "    partlist = particleTools.randomParticleList(numparticles, boxsize, relativeDistanceCutOff, D, Drot)\n",
@@ -89,11 +91,11 @@
     "        boundState = traj.getState(partlist[0], partlist[1])\n",
     "        if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            if boundState in outputBoundStates:\n",
-    "                Afpts.append(integrator.clock)\n",
+    "                fptsA.append(integrator.clock)\n",
     "                integrator.resetClock()\n",
     "                unbound = False;\n",
     "            else:\n",
-    "                Bfpts.append(integrator.clock)\n",
+    "                fptsB.append(integrator.clock)\n",
     "                integrator.resetClock()\n",
     "                unbound = False;\n",
     "                \n",
@@ -106,28 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data computed by script\n",
-    "based on code above"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numTrajs = 10000\n",
-    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
-    "fptsA = []\n",
-    "fptsB = []\n",
-    "with open(filename1) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        if state == 'A':\n",
-    "            fptsA.append(time)\n",
-    "        elif state == 'B':\n",
-    "            fptsB.append(time)"
+    "## Plots of benchmark FPT data"
    ]
   },
   {
@@ -155,103 +136,6 @@
     "print(\"Raw MFPTs (A and B): \", np.array(fptsA).mean(), np.array(fptsB).mean() )\n",
     "print(\"Bootstrapping mean and std (A): \", mfptA, fptAstd)\n",
     "print(\"Bootstrapping mean and std (B): \", mfptB, fptBstd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data from MSMRD integrator\n",
-    "lagtime = 600\n",
-    "numTrajs = 10000\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
-    "'_boxsize' + str(boxsize) + '.xyz'\n",
-    "MSMRDfptsA = []\n",
-    "MSMRDfptsB = []\n",
-    "with open(filename) as file:\n",
-    "    for line in file:\n",
-    "        state, time = line.split(\" \")\n",
-    "        time = float(time)\n",
-    "        if state == 'A':\n",
-    "            MSMRDfptsA.append(time)\n",
-    "        elif state == 'B':\n",
-    "            MSMRDfptsB.append(time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hbins = range(0, 600,15)\n",
-    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='MSMRD-A');\n",
-    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='MSMRD-B');\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples\n",
-    "numBootsrapSamples = 2000\n",
-    "MSMRDmfptA, MSMRDfptAstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA, numBootsrapSamples)\n",
-    "MSMRDmfptB, MSMRDfptBstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB, numBootsrapSamples)\n",
-    "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA).mean(), np.array(MSMRDfptsB).mean())\n",
-    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA, MSMRDfptAstd)\n",
-    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB, MSMRDfptBstd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalizing weights\n",
-    "weightsA = np.ones_like(fptsA)/float(len(fptsA))\n",
-    "weightsAMSMRD = np.ones_like(MSMRDfptsA)/float(len(MSMRDfptsA))\n",
-    "# Plot histograms\n",
-    "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
-    "plt.xlim([0,500])\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalizing weights\n",
-    "weightsB = np.ones_like(fptsB)/float(len(fptsB))\n",
-    "weightsBMSMRD = np.ones_like(MSMRDfptsB)/float(len(MSMRDfptsB))\n",
-    "# Plot histograms\n",
-    "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsB, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
-    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
-    "plt.xlim([0,500])\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(fptsB), len(MSMRDfptsB))\n",
-    "print(len(fptsA), len(MSMRDfptsA))\n",
-    "ratioFPT = float(len(fptsA))/float(len(fptsB))\n",
-    "ratioMSMRDFPT = float(len(MSMRDfptsA))/float(len(MSMRDfptsB))\n",
-    "print(\"Ratios:\", ratioFPT, ratioMSMRDFPT )"
    ]
   },
   {
