--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# Write discrete trajectory to xyz file\n",
     "for i, dtraj in enumerate(dtrajs):\n",
-    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python.xyz', 'w')\n",
+    "    datafile  = open(fnamebase + str(i).zfill(4) + '_discrete_python2.xyz', 'w')\n",
     "    for j in range(len(dtraj)):\n",
     "        datafile.write(str(dtraj[j]) + '\\n')\n",
     "    datafile.close()\n",
