--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -20,10 +20,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Main parameters\n",
+    "numparticles = 2\n",
+    "boxsize = 6 #5 \n",
+    "D = 1.0\n",
+    "Drot = 1.0\n",
+    "relativeDistanceCutOff = 2.2\n",
+    "numTrajectories = 1000"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get FPT data of bechmark and MSMRD from files"
+    "## Get bound2unbound FPT data of bechmark and MSMRD from files"
    ]
   },
   {
@@ -34,7 +49,7 @@
    "source": [
     "# Load benchmark FPT data computed by script\n",
     "numTrajs = 10000\n",
-    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_2bound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA = []\n",
     "fptsB = []\n",
     "with open(filename1) as file:\n",
@@ -56,7 +71,7 @@
     "# Load FPT data obtained with MSMRD integrator\n",
     "lagtime = 600\n",
     "numTrajs = 10000\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_2bound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
@@ -95,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples\n",
+    "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
     "numBootsrapSamples = 2000\n",
     "mfptA, fptAstd = analysisTools.bootstrappingMFPTs(fptsA, numBootsrapSamples)\n",
     "mfptB, fptBstd = analysisTools.bootstrappingMFPTs(fptsB, numBootsrapSamples)\n",
@@ -122,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compuate mean and standard deviation of bootstrapped samples\n",
+    "# Compuate mean and standard deviation of bootstrapped samples of MSMRD simulation\n",
     "numBootsrapSamples = 2000\n",
     "MSMRDmfptA, MSMRDfptAstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA, numBootsrapSamples)\n",
     "MSMRDmfptB, MSMRDfptBstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB, numBootsrapSamples)\n",
@@ -143,7 +158,7 @@
     "# Plot histograms\n",
     "hbins = range(0, 600,15)\n",
     "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
     "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
@@ -177,6 +192,134 @@
     "ratioMSMRDFPT = float(len(MSMRDfptsA))/float(len(MSMRDfptsB))\n",
     "print(\"Ratios:\", ratioFPT, ratioMSMRDFPT )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get unbound2bound FPT data of bechmark and MSMRD from files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load benchmark FPT data computed by script\n",
+    "numTrajs = 10000\n",
+    "filenameA = '../../data/dimer/first_passage_times/patchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameB = '../../data/dimer/first_passage_times/patchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
+    "fptsA2unbound = []\n",
+    "fptsB2unbound = []\n",
+    "with open(filenameA) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        fptsA2unbound.append(time)\n",
+    "with open(filenameB) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        fptsB2unbound.append(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load FPT data obtained with MSMRD integrator\n",
+    "lagtime = 600\n",
+    "numTrajs = 10000\n",
+    "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "'_boxsize' + str(boxsize) + '.xyz'\n",
+    "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "'_boxsize' + str(boxsize) + '.xyz'\n",
+    "MSMRDfptsA2unbound = []\n",
+    "MSMRDfptsB2unbound = []\n",
+    "with open(filenameA) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        MSMRDfptsA2unbound.append(time)\n",
+    "with open(filenameB) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        MSMRDfptsB2unbound.append(time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plots of FPT data from benchmark and MSMRD simulations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
+    "numBootsrapSamples = 2000\n",
+    "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrappingMFPTs(fptsA2unbound, numBootsrapSamples)\n",
+    "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrappingMFPTs(fptsB2unbound, numBootsrapSamples)\n",
+    "print(\"Raw MFPTs (A and B): \", np.array(fptsA2unbound).mean(), np.array(fptsB2unbound).mean() )\n",
+    "print(\"Bootstrapping mean and std (A): \", mfptA2unbound, fptA2unboundstd)\n",
+    "print(\"Bootstrapping mean and std (B): \", mfptB2unbound, fptB2unboundstd)\n",
+    "MSMRDmfptA2unbound, MSMRDfptA2unboundstd = analysisTools.bootstrappingMFPTs(MSMRDfptsA2unbound, numBootsrapSamples)\n",
+    "MSMRDmfptB2unbound, MSMRDfptB2unboundstd = analysisTools.bootstrappingMFPTs(MSMRDfptsB2unbound, numBootsrapSamples)\n",
+    "print(\"Raw MSMRD MFPTs (A and B): \",np.array(MSMRDfptsA2unbound).mean(), np.array(MSMRDfptsB2unbound).mean())\n",
+    "print(\"MSMRD bootstrapping mean and std (A): \", MSMRDmfptA2unbound, MSMRDfptA2unboundstd)\n",
+    "print(\"MSMRD bootstrapping mean and std (B): \", MSMRDmfptB2unbound, MSMRDfptB2unboundstd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting histogram for A to unbound FPTs\n",
+    "# Normalizing weights\n",
+    "weightsA = np.ones_like(fptsA2unbound)/float(len(fptsA2unbound))\n",
+    "weightsAMSMRD = np.ones_like(MSMRDfptsA2unbound)/float(len(MSMRDfptsA2unbound))\n",
+    "# Plot histograms\n",
+    "hbins = np.arange(0, 5, 0.1)\n",
+    "plt.hist(fptsA2unbound, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
+    "plt.hist(MSMRDfptsA2unbound, bins = hbins, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.xlim([0,10])\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting histogram for B to unbound FPTs\n",
+    "# Normalizing weights\n",
+    "weightsB = np.ones_like(fptsB2unbound)/float(len(fptsB2unbound))\n",
+    "weightsBMSMRD = np.ones_like(MSMRDfptsB2unbound)/float(len(MSMRDfptsB2unbound))\n",
+    "# Plot histograms\n",
+    "hbins = np.arange(0, 5, 0.1)\n",
+    "plt.hist(fptsB2unbound, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
+    "plt.hist(MSMRDfptsB2unbound, bins = hbins, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "plt.xlim([0,10])\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
