--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -158,7 +158,7 @@
     "# Plot histograms\n",
     "hbins = range(0, 600,15)\n",
     "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA, bins = hbins, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
     "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
@@ -238,7 +238,7 @@
     "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA2unbound = []\n",
-    "MSMRDfptsB2unbound = []\n",
+    "MSMRDfptsB3unbound = []\n",
     "with open(filenameA) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
@@ -248,7 +248,7 @@
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
-    "        MSMRDfptsB2unbound.append(time)"
+    "        MSMRDfptsA2unbound.append(time)"
    ]
   },
   {
@@ -289,10 +289,10 @@
     "weightsA = np.ones_like(fptsA2unbound)/float(len(fptsA2unbound))\n",
     "weightsAMSMRD = np.ones_like(MSMRDfptsA2unbound)/float(len(MSMRDfptsA2unbound))\n",
     "# Plot histograms\n",
-    "hbins = np.arange(0, 5, 0.1)\n",
+    "hbins = range(0, 600,15)\n",
     "plt.hist(fptsA2unbound, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA2unbound, bins = hbins, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
-    "plt.xlim([0,10])\n",
+    "plt.hist(MSMRDfptsA2unbound, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
   },
@@ -307,19 +307,12 @@
     "weightsB = np.ones_like(fptsB2unbound)/float(len(fptsB2unbound))\n",
     "weightsBMSMRD = np.ones_like(MSMRDfptsB2unbound)/float(len(MSMRDfptsB2unbound))\n",
     "# Plot histograms\n",
-    "hbins = np.arange(0, 5, 0.1)\n",
+    "hbins = range(0, 600,15)\n",
     "plt.hist(fptsB2unbound, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
-    "plt.hist(MSMRDfptsB2unbound, bins = hbins, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
-    "plt.xlim([0,10])\n",
+    "plt.hist(MSMRDfptsB2unbound, bins = 40, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
