Added radialBounds parameter to msmrdIntegrator

--- a/examples/benchmark/plotPatchyDimerFPTs.ipynb
+++ b/examples/benchmark/plotPatchyDimerFPTs.ipynb
@@ -30,7 +30,6 @@
     "boxsize = 6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "relativeDistanceCutOff = 2.2\n",
     "numTrajectories = 1000"
    ]
   },
@@ -98,9 +97,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Color definitions\n",
+    "c1 = '#ff3300' # for benchmark\n",
+    "c2 = '#0099ff' # for MSM/RD\n",
+    "# Alpha transparency definition\n",
+    "a1 = 0.2\n",
+    "a2 = 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A');\n",
-    "plt.hist(fptsB, bins = hbins, alpha=0.5, label ='B');\n",
+    "plt.hist(fptsA, bins = hbins, alpha=0.5, edgecolor='None', label ='A');\n",
+    "plt.hist(fptsB, bins = hbins, alpha=0.5, edgecolor='None', label ='B');\n",
     "plt.legend()"
    ]
   },
@@ -157,8 +170,12 @@
     "weightsAMSMRD = np.ones_like(MSMRDfptsA)/float(len(MSMRDfptsA))\n",
     "# Plot histograms\n",
     "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsA, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
+    "plt.hist(fptsA, bins = hbins, alpha=a1, color=c1, weights = weightsA );\n",
+    "plt.hist(fptsA, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step', \n",
+    "         facecolor = 'None', weights = weightsA, label ='A');\n",
+    "plt.hist(MSMRDfptsA, bins = hbins, alpha=a1, color=c2, weights = weightsAMSMRD);\n",
+    "plt.hist(MSMRDfptsA, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step', \n",
+    "         weights = weightsAMSMRD, label ='MSMRD-A');\n",
     "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
@@ -174,8 +191,12 @@
     "weightsBMSMRD = np.ones_like(MSMRDfptsB)/float(len(MSMRDfptsB))\n",
     "# Plot histograms\n",
     "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsB, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
-    "plt.hist(MSMRDfptsB, bins = hbins, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "plt.hist(fptsB, bins = hbins, alpha=a1, color=c1, weights = weightsB);\n",
+    "plt.hist(fptsB, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsB, label ='B',);\n",
+    "plt.hist(MSMRDfptsB, bins = hbins, alpha=a1, color=c2, weights = weightsBMSMRD);\n",
+    "plt.hist(MSMRDfptsB, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsBMSMRD, label ='MSMRD-B',);\n",
     "plt.xlim([0,500])\n",
     "plt.legend()"
    ]
@@ -235,10 +256,10 @@
     "numTrajs = 10000\n",
     "filenameA = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
-    "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_A2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
+    "filenameB = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_B2unbound_trajs' + str(numTrajs) + '_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA2unbound = []\n",
-    "MSMRDfptsB3unbound = []\n",
+    "MSMRDfptsB2unbound = []\n",
     "with open(filenameA) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
@@ -248,7 +269,7 @@
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
-    "        MSMRDfptsA2unbound.append(time)"
+    "        MSMRDfptsB2unbound.append(time)"
    ]
   },
   {
@@ -265,7 +286,7 @@
    "outputs": [],
    "source": [
     "# Compuate mean and standard deviation of bootstrapped samples of benchmark\n",
-    "numBootsrapSamples = 2000\n",
+    "numBootsrapSamples = 200\n",
     "mfptA2unbound, fptA2unboundstd = analysisTools.bootstrappingMFPTs(fptsA2unbound, numBootsrapSamples)\n",
     "mfptB2unbound, fptB2unboundstd = analysisTools.bootstrappingMFPTs(fptsB2unbound, numBootsrapSamples)\n",
     "print(\"Raw MFPTs (A and B): \", np.array(fptsA2unbound).mean(), np.array(fptsB2unbound).mean() )\n",
@@ -289,10 +310,14 @@
     "weightsA = np.ones_like(fptsA2unbound)/float(len(fptsA2unbound))\n",
     "weightsAMSMRD = np.ones_like(MSMRDfptsA2unbound)/float(len(MSMRDfptsA2unbound))\n",
     "# Plot histograms\n",
-    "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsA2unbound, bins = hbins, alpha=0.5, label ='A', weights = weightsA);\n",
-    "plt.hist(MSMRDfptsA2unbound, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
-    "plt.xlim([0,500])\n",
+    "hbins = np.arange(0, 5, 0.1)\n",
+    "plt.hist(fptsA2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsA);\n",
+    "plt.hist(fptsA2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsA, label ='A');\n",
+    "plt.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsAMSMRD);\n",
+    "plt.hist(MSMRDfptsA2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsAMSMRD, label ='MSMRD-A');\n",
+    "plt.xlim([0,3])\n",
     "plt.legend()"
    ]
   },
@@ -307,12 +332,23 @@
     "weightsB = np.ones_like(fptsB2unbound)/float(len(fptsB2unbound))\n",
     "weightsBMSMRD = np.ones_like(MSMRDfptsB2unbound)/float(len(MSMRDfptsB2unbound))\n",
     "# Plot histograms\n",
-    "hbins = range(0, 600,15)\n",
-    "plt.hist(fptsB2unbound, bins = hbins, alpha=0.5, label ='B', weights = weightsB);\n",
-    "plt.hist(MSMRDfptsB2unbound, bins = 40, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
-    "plt.xlim([0,500])\n",
+    "hbins = np.arange(0, 5, 0.1)\n",
+    "plt.hist(fptsB2unbound, bins = hbins, alpha=a1, color=c1, weights = weightsB);\n",
+    "plt.hist(fptsB2unbound, bins = hbins, alpha=a2, edgecolor=c1, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsB, label ='B');\n",
+    "plt.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a1, color=c2, weights = weightsBMSMRD);\n",
+    "plt.hist(MSMRDfptsB2unbound, bins = hbins, alpha=a2, edgecolor=c2, lw=2, histtype='step',\n",
+    "         facecolor='None', weights = weightsBMSMRD, label ='MSMRD-B');\n",
+    "plt.xlim([0,3])\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
