--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -23,7 +23,8 @@
     "# Main parameters\n",
     "numBoundStates = 8\n",
     "maxNumBoundStates = 10\n",
-    "relativeDistanceCutOff = 2.2\n",
+    "radialBounds = [1.4, 2.2]\n",
+    "relativeDistanceCutOff = radialBounds[1]\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
     "boxsize = 6\n",
     "\n",
@@ -37,7 +38,7 @@
     "# Trajectory relevant parameters (Need to be equal to the one used to generate the rateDictionary)\n",
     "dt = 0.00001\n",
     "lagtime = 200 \n",
-    "effectiveLagtime = dt*lagtime\n",
+    "effectiveLagtime = dt*lagtime # Just for reference, not required since it is handled directly by rateDicitonary\n",
     "# Other trajectory parameters for reference.\n",
     "timesteps = 4000000 # 2000000\n",
     "stride = 25 #2500\n",
@@ -82,9 +83,9 @@
     "seed = 0\n",
     "Dbound = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
     "DboundRot = [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
-    "couplingMSM = msmrdMSM(effectiveLagtime, numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
+    "couplingMSM = msmrdMSM(numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
     "couplingMSM.setDbound(Dbound, DboundRot)\n",
-    "couplingMSM.setmaxNumberBoundStates(maxNumBoundStates)"
+    "couplingMSM.setMaxNumberBoundStates(maxNumBoundStates)"
    ]
   },
   {
@@ -117,7 +118,7 @@
     "dt = 0.002 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
-    "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, relativeDistanceCutOff, unboundMSM, couplingMSM)"
+    "integrator = msmrdIntegrator(dt, seed, bodytype, numParticleTypes, radialBounds, unboundMSM, couplingMSM)"
    ]
   },
   {
