Setup for new ref simulation

--- a/examples/models/patchyParticlesAngular.ipynb
+++ b/examples/models/patchyParticlesAngular.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "# Define boundary (choose either spherical or box)\n",
     "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'periodic')\n",
+    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
     "integrator.setBoundary(boxBoundary)\n",
     "#sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
     "#integrator.setBoundary(sphereBoundary)"
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 500000 #20000000\n",
+    "timesteps = 1000000 #20000000\n",
     "stride = 1000 #250 #1000\n",
     "datafile  = open('../../data/vmd/patchyParticlesAngular.xyz', 'w')\n",
     "for i in range(timesteps):\n",
