New discretization parameters

--- a/examples/discretizeTrajectory.ipynb
+++ b/examples/discretizeTrajectory.ipynb
@@ -30,7 +30,7 @@
     "nfiles = 500\n",
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
-    "totalTimeSteps = 2000000\n",
+    "totalTimeSteps = 4000000 #2000000\n",
     "boxsize = 4\n",
     "boundaryType = 'periodic'\n",
     "\n",
