--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -26,7 +26,7 @@
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
-    "totalTimeSteps = 2000000\n",
+    "totalTimeSteps = 4000000 #2000000\n",
     "fnamebase = '../data/dimer/simDimer_t' + \"{:.2E}\".format(totalTimeSteps) + \"_s{:d}\".format(stride) + \"_\"\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "maxlagtime = 1000\n",
-    "nits = 40\n",
+    "nits = 20\n",
     "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
     "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
